--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,7 +6,14 @@ nav {
   height: 80px;
   z-index: 2;
 }
+nav a { 
+  text-decoration: none; 
+  color: white;
+}
 nav h2{
   padding: 10px 0px 0px 100px;
   color: aliceblue;
+}
+nav input[type="checkbox"]{
+  display: none;
 }
