--- a/css/table.css
+++ b/css/table.css
@@ -57,7 +57,6 @@
 .home-section .display-tables label{
     font-family: 'Poppins', sans-serif;
     color: #333333;
-    font-weight: 500;
     font-size: 16px;
 }
 .home-section .display-tables select{
@@ -67,8 +66,15 @@
 }
 .home-section .display-tables table{
     border-radius: 20px 20px 0 0 ;
+    margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
+}
+.home-section .display-tables table input[type="number"]{
+    text-align: center;
+    border: 3px solid ;
+    border-radius: 6px;
+    margin: 10px 0px 10px 0px;
 }
 
 .home-section .display-tables table th.before{
@@ -87,6 +93,7 @@
     font-weight: 500;
 }
 .home-section .display-tables tr th{
+    padding: 0px 50px 0px 50px;
     font-weight: 400;
 }
 .home-section  th{
@@ -99,6 +106,7 @@
 }
 .home-section  td{
     text-align: center;
+    padding: 0px 20px 0px 20px;
 }
 .home-section .display-tables table{
     -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
