--- a/css/menu-setting.css
+++ b/css/menu-setting.css
@@ -267,11 +267,41 @@
     padding: 12px 16px;
     z-index: 1;
   }
+  .dropdown-content button{
+    background-color: #dc3741;
+    color: rgb(255, 255, 255);
+    padding: 0px 20px;
+    margin: 0px 10px 0px 0px;
+    border: none;
+    border-radius: 10px;
+  }
+  .dropdown-content button:hover{
+    background: #c8343c;
+  }
   
   .dropdown:hover .dropdown-content {
     display: block;
   }
+  .chart-container {
+    margin: auto;
+    width: 40%;
+    padding: 10px;
+    /* margin: auto;
+    height: 80vh;
+    width: 80vw; */
+    
+  }
+  
   @media only screen and (max-width: 1600px) {
+    .chart-container {
+      margin: auto;
+      width: 50%;
+      padding: 10px;
+      /* margin: auto;
+      height: 80vh;
+      width: 80vw; */
+      
+    }
       .center{
         padding-left: 5.3em;
       }
