--- a/css/menu-setting.css
+++ b/css/menu-setting.css
@@ -47,7 +47,7 @@
 }
 .input-center input[type=text]{
   padding: 0px 20px;
-  margin: 0 10px 0 0;
+  margin: 0 10px 0 10px;
   border-radius: 10px;
 }
 .input-center input[type=submit]{
