--- a/css/table.css
+++ b/css/table.css
@@ -169,3 +169,24 @@
 .home-section .closebtn:hover {
     color: black;
 }
+.btn {
+    border: 2px solid black;
+    background-color: white;
+    padding-top: 3px;
+    color: black;
+    font-size: 16px;
+    cursor: pointer;
+     transition-duration: 0.4s;
+  
+  }
+  /* Green */
+  .delete {
+    border-color: red;
+    border-radius: 4px;
+    color: red;
+  }
+  
+  .delete:hover {
+    background-color: red;
+    color: white;
+  }
